# pay-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  supervisord.conf
backend/alembic/: env.py
backend/alembic/versions/: 141eca737822_rename_reminder_send_hour_to_reminder_.py  26af8e218f0f_add_email_reminder_fields.py  632d778e4aa5_add_language_preference_to_users.py  68cc4b807b16_add_start_period_to_bill_templates.py  7d724b18e569_initial_schema.py  a1b2c3d4e5f6_bill_category_enum.py  a2b3c4d5e6f7_add_composite_indexes.py  b1c2d3e4f5a6_add_password_reset_tokens.py  b6c2cdd3cc82_add_restore_snapshots_table.py  ba2f1ad53a62_add_notification_timing_prefs.py  bcd40842a95d_add_monthly_summary_fields_to_users.py  c4f8e1a2b3d9_add_reminder_send_hour.py  c8ec16439b01_add_email_sent_at_to_payment_instance.py  d6fac3b08953_add_user_id_to_bill_templates.py  d7032fd0a99e_add_is_deleted_to_payment_instances.py  e3eb40b9157b_add_currency_to_bill_templates.py  f1a2b3c4d5e6_add_indexes_for_query_performance.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: bill.py  reset_token.py  restore_snapshot.py  user.py
backend/app/routers/: auth.py  bills.py  export.py
backend/app/schemas/: auth.py  bill.py
backend/app/services/: email.py  recurrence.py  reminder_job.py  snapshot_cleanup.py
backend/tests/: conftest.py  test_auth_endpoints.py  test_bill_update_restore.py  test_bills_create.py  test_delete_payment.py  test_email_service.py  test_export_summary.py  test_export_xlsx.py  test_recurrence_service.py  test_reminder_job.py  test_reset_password.py  test_restore.py  test_restore_snapshot.py  test_user_scoping.py
context/foundation/: infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  tech-stack.md  test-plan.md
demo/: Dockerfile  README.md  seed.py  seed_data.json
frontend/: .gitignore  Dockerfile  Dockerfile.e2e  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+207 files in other folders)
