[project]
name = "backend"
version = "0.1.0"
description = "Pay Tracker backend — FastAPI + SQLAlchemy + Alembic"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "bcrypt>=4.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
]
