[project]
name = "backend"
version = "1.0.1"
description = "Pay Tracker backend — FastAPI + SQLAlchemy + Alembic"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "bcrypt>=4.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
    "apscheduler>=3.11",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pandas-stubs>=2.0",
    "types-python-jose>=3.5",
    "psycopg2-binary>=2.9.12",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "testcontainers[postgresql]>=4.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["alembic/*", "tests/*"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true
